--- a/practical 2/DS_prac_2.ipynb
+++ b/practical 2/DS_prac_2.ipynb
@@ -430,6 +430,7 @@
         "outputId": "da14e676-93b4-4052-b95b-de863913bad3"
       },
       "source": [
+        "# 1. Gather Columns into rows\n",
         "pd.melt(filedata)"
       ],
       "execution_count": 8,
@@ -556,6 +557,7 @@
         "outputId": "4dca6b5b-af68-494a-cddd-2057169db57e"
       },
       "source": [
+        "#2. Spread rows into columns\n",
         "filedata.pivot(columns = 'gender', values = 'math score')"
       ],
       "execution_count": 10,
@@ -667,6 +669,7 @@
         "outputId": "4b6d1994-4a97-4e8e-f181-a04c87b5896f"
       },
       "source": [
+        "# 3. Append rows of Data Frames\n",
         "pd.concat([filedata,file2data])"
       ],
       "execution_count": null,
@@ -865,6 +868,7 @@
         "outputId": "a925f640-193a-4198-dd35-a2bbbaac3cca"
       },
       "source": [
+        "#4. Append columns of Data Frames\n",
         "pd.concat([filedata,file2data], axis=1)"
       ],
       "execution_count": null,
@@ -1159,6 +1163,7 @@
         "outputId": "0ff65c7d-1a5e-4ff4-b315-8cf42aadc30d"
       },
       "source": [
+        "#5.\tOrder rows by values of a column\n",
         "filedata.sort_values('math score')"
       ],
       "execution_count": null,
@@ -1332,6 +1337,7 @@
         "outputId": "83604d54-ff96-41a3-a3ae-ea94bec796fe"
       },
       "source": [
+        "#6. Order rows by values of a column\n",
         "filedata.sort_values('math score', ascending=False)"
       ],
       "execution_count": null,
@@ -1505,6 +1511,7 @@
         "outputId": "a23e38ca-532c-41f9-ca9e-d8151a80526d"
       },
       "source": [
+        "#7. Sort the index of a Data Frame\n",
         "filedata.sort_index()"
       ],
       "execution_count": null,
@@ -1678,6 +1685,7 @@
         "outputId": "fcc6b6c4-cfa3-4c63-e25d-f9929700065a"
       },
       "source": [
+        "#8. Reset index of Data Frame to row numbers, moving index to columns.\n",
         "filedata.reset_index()"
       ],
       "execution_count": null,
@@ -1861,6 +1869,7 @@
         "outputId": "9db0d4fe-7904-40c9-ce8b-91741cad0b2e"
       },
       "source": [
+        "#9.\tDrop columns from Data Frame Subset observations\n",
         "filedata.drop(columns=['gender','test preparation course'])"
       ],
       "execution_count": null,
@@ -2014,6 +2023,7 @@
         "outputId": "3bbb43c3-ae2c-4e28-a352-9cdd68863663"
       },
       "source": [
+        "# 10. Extract rows that meet logical criteria.\n",
         "filedata[filedata['reading score'] > 80]"
       ],
       "execution_count": 14,
@@ -2127,6 +2137,7 @@
         "outputId": "9dba95ea-704d-4bbf-9593-7e97e36eca43"
       },
       "source": [
+        "#11. Remove duplicate rows (only considers columns)\n",
         "filedata.drop_duplicates()"
       ],
       "execution_count": 15,
